# PWHomeWork6

./: README.md  SQlite_db.sqlite  Script.sql  pyproject.toml  querits.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py
