[tool.poetry]
name = "homework6"
version = "0.1.0"
description = ""
authors = ["Jymbarbaruoky <116517553+Jymbarbaruoky@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
